# turtlebot_control

./: README.md
pub_desired_states/: CMakeLists.txt  package.xml
pub_desired_states/include/pub_desired_states/: pub_desired_states.h  trajectory_builder.h
pub_desired_states/launch/: bebop_open_loop_control_square_path.launch  turtlebot_open_loop_control_path1.launch  turtlebot_open_loop_control_square_path.launch
pub_desired_states/params/: bebop2.yaml  turtlebot3_wpi.yaml
pub_desired_states/src/: open_loop_controller.cpp  pub_desired_path_client.cpp  pub_desired_path_client_square.cpp  pub_desired_states.cpp  trajectory_builder.cpp
turtlebot_linear_control/: CMakeLists.txt  package.xml
turtlebot_linear_control/include/turtlebot_linear_control/: turtlebot_linear_control.h
turtlebot_linear_control/launch/: linear_control_path1.launch  linear_control_square_path.launch
turtlebot_linear_control/src/: turtlebot_linear_control.cpp
